# user-svc-client-rust

./: Cargo.toml
src/middleware/: client.rs  mod.rs
src/middleware/user_svc/: user_service.rs
